[tool.poetry]
name = "dribdat-docs"
version = "0.1.3"
description = "A documentation site for dribdat"
authors = ["Dribdat contributors <dribdat@datalets.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3"
livemark = "^0"
ghp-import = "^2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
